--- a/docs/stat566/ex_stat566.Rmd
+++ b/docs/stat566/ex_stat566.Rmd
@@ -140,11 +140,31 @@ There are $2^4=16$ treatment combination, 16 observation. There are $16/8=2$ blo
 
 One-Quarter Fraction of $2^k$ design. p=2
 
-|Design|factors|blocks|fraction|EU/Blk|indep generators|generalized interactions|aliases/effect|
-| ---  | ---   | ---  | ---    | ---  | ---            | ---                    | ---          |
-$2^{k-p}$| $k$ |$2^p$ |$1/{2^p}$|$2^{k-p}$| $P$    | $2^p-p-1$              | $2^p-1$    |
-$2^{7-3}_{IV}$| $7$ |$2^3$ |$1/{2^3}$|$2^{7-3}$| $3$    | $2^3-3-1$              | $2^3-1$    |
+|Design|factors|blocks/fraction|Blk size|indep generators|generalized interactions|aliases/effect|
+| ---  | ---   |        ---    | ---    | ---            | ---                    | ---          |
+|$2^{k-p}$|$k$ |$2^p$,$1/{2^p}$|$2^{k-p}$| $P$    | $2^p-p-1$        | $2^p-1$    |
+|$2^{3-1}$|3   |  2            |4        | 1      |  0               |  1         |
+|$2^{3-2}$|3   |  4            |2        | 2      |  1               |  3         |
+|$2^{4-1}$|4   |  2            |8        | 1      |  0               |  1         |
+|$2^{4-2}$|4   |  4            |4        | 2      |  1               |  3         |
+|$2^{4-3}$|4   |  8            |2        | 3      |  4               |  7         |
+|$2^{5-1}$|5   |  2            |16       | 1      |  0               |  1         |
+|$2^{5-2}$|5   |  4            |8        | 2      |  1               |  3         |
+|$2^{5-3}$|5   |  8            |4        | 3      |  4               |  7         |
+|$2^{5-4}$|5   |  16           |2        | 4      |  11              |  15        |
+|$2^{6-1}$|6   |  2            |32       | 1      |  0               |  1         |
+|$2^{6-2}$|6   |  4            |16       | 2      |  1               |  3         |
+|$2^{6-3}$|6   |  8            |8        | 3      |  4               |  7         |
+|$2^{6-4}$|6   |  16           |4        | 4      |  11              |  15        |
+|$2^{6-5}$|6   |  32           |2        | 5      |  26              |  31        |
+|$2^{7-1}$|7   |  2            |64       | 1      |  0               |  1         |
+|$2^{7-2}$|7   |  4            |32       | 2      |  1               |  3         |
+|$2^{7-3}$|7   |  8            |16       | 3      |  4               |  7         |
+|$2^{7-4}$|7   |  16           |8        | 4      |  11              |  15        |
+|$2^{7-5}$|7   |  32           |4        | 5      |  26              |  31        |
+|$2^{7-6}$|7   |  64           |2        | 6      |  57              |  63        |
 
+3 2 4 ABC ABC
 For $2^{7-3}_{IV}$ p=3 independent generators I=ABCE=BCDF=ACDG c=4, $2^p-p-1=2^3-3-1=4$ generalized interactions, Each effect has $2^3-1=7$ aliases.
 
 $ABCE*BCDF=ADEF$
